--- a/REST_projects/scrum/board/templates/board/index.html
+++ b/REST_projects/scrum/board/templates/board/index.html
@@ -7,6 +7,8 @@
         <title>Scrum</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="{% static 'board/vendor/normalize.css' %}">
+        <link rel="stylesheet" href="{% static 'board/css/board.css' %}">
         <script type="text/html" id="home-template">
             <h1>Welcome to my Scrum Board App</h1> 
         </script>
@@ -18,6 +20,16 @@
                 <input type="password" id="id_password" name="password" required />
                 <button type="submit">Login</button>
             </form>
+        </script>
+        <script type="text/html" id="header-template">
+            <spann class="title">Scrum Bord</span>
+                <% if (authenticated) { %>
+                    <nav>
+                        <a href="/" class="button"> Your Sprints </a>
+                        <a href="#" class="logout button">Logout </a>
+                    </nav>
+                <% } %>
+            </span>
         </script>
 
     </head>
@@ -41,5 +53,6 @@
         <script src="{% static 'board/js/models.js' %}"></script>
         <script src="{% static 'board/js/views.js' %}"></script>
         <script src="{% static 'board/js/router.js' %}"></script>
+        
     </body>
 </html>
