--- a/REST_projects/scrum/board/templates/board/index.html
+++ b/REST_projects/scrum/board/templates/board/index.html
@@ -12,7 +12,7 @@
         <script type="text/html" id="home-template">
             <h1>Welcome to my Scrum Board App</h1> 
             <h2>Your Sprints</h2>
-            <button calss="add" type="submit">Add Sprint</button>
+            <button class="add" type="submit">Add Sprint</button>
             <% if (sprints !== null) {%>
                 <div class="sprints">
                     <% _.each(sprints.models, function (sprint) { %>
@@ -44,7 +44,18 @@
                 <% } %>
             </span>
         </script>
-
+        <script type="text/html" id="new-sprint-template">
+            <form action="" method="post">
+                <label for="id_name">Sprint Name</label>
+                <input id="id_name" type="text" name="name" maxlength="100" required />
+                <label for="id_end">End Date</label>
+                <input id="id_end" type="date" name="end" />
+                <label for="id_description">Description</label>
+                <textarea id="id_description" name="description" cols="50"></textarea>
+                <button class="cancel">Cancel</button>
+                <button type="submit">Create</button>
+            </form>
+        </script>
     </head>
     <body>
         <div id="content"></div>
